# mcpEntra

./: HOW_IT_WORKS.md  README.md  __init__.py  index.js  install.py  load_env.py  mcp_microsoft_graph.py  package.json  pyproject.toml  requirements.txt  setup_mcp.py
scripts/: install-deps.js
