[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-entra"
version = "1.0.0"
description = "Microsoft Graph MCP Server for AI assistants"
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = ""}
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "azure-identity>=1.12.0",
    "msgraph-sdk>=1.0.0",
    "mcp>=0.13.0",
    "pydantic>=1.10.7",
    "typing-extensions>=4.5.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-entra"
Repository = "https://github.com/yourusername/mcp-entra.git"

[project.scripts]
mcp-entra = "mcp_microsoft_graph:main" 